--- a/SylDesk/SylDesk/FormRegistro1.resx
+++ b/SylDesk/SylDesk/FormRegistro1.resx
@@ -120,14 +120,14 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="buttonRegistrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAUgAAAFIAZZ7OisAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAABKklEQVRYR2MwNjb+j4xNTExu+vr6/kfGOze3f9y1ueM/OXjahKIraHY8NjIyUvn//z8DCA+EA0AY
-        7giqOmDBrIr/zs62/3Myw+FiOBwAwmBHUNUBc6aXgs1IjA+Ai+FxAAg/HmgH/B91wPBywMpFtf+z0kP/
-        tzWmw8Xo6gBsmBwHPHJ1dT2DjNubM451t2WdIQfnZIQdQLcDGWM4gN541AGjDsBwgIWV1c1tZx78pxae
-        smQzadlw1AHoDthx9v7/E1duEo0PX7pNXQfsOX/v/6MHF4jG125doa4DdgJD4PTVG0Tjo5epHAKUYood
-        sOvc/f9Xbl0lGp+5doO6DhjwNLAdiPeev0s03n3uHnUdQCke+lEACtLbdy8RjS/euEZdB1CKRx2A3wHG
-        /wGadXY1ltmWpwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        SAAAAUgBlns6KwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEqSURBVFhHYzA2
+        Nv6PjE1MTG76+vr+R8Y7N7d/3LW54z85eNqEoitodjw2MjJS+f//PwMID4QDQBjuCKo6YMGsiv/Ozrb/
+        czLD4WI4HADCYEdQ1QFzppeCzUiMD4CL4XEACD8eaAf8H3XA8HLAykW1/7PSQ/+3NabDxejqAGyYHAc8
+        cnV1PYOM25szjnW3ZZ0hB+dkhB1AtwMZYziA3njUAaMOwHCAhZXVzW1nHvynFp6yZDNp2XDUAegO2HH2
+        /v8TV24SjQ9fuk1dB+w5f+//owcXiMbXbl2hrgN2AkPg9NUbROOjl6kcApRiih2w69z9/1duXSUan7l2
+        g7oOGPA0sB2I956/SzTefe4edR1AKR76UQAK0tt3LxGNL964Rl0HUIpHHYDfAcb/AZp1djWW2ZanAAAA
+        AElFTkSuQmCC
 </value>
   </data>
 </root>
