--- a/SylDesk/SylDesk/FormInicial.resx
+++ b/SylDesk/SylDesk/FormInicial.resx
@@ -3699,4 +3699,19 @@
         AAbRQf8AE4JOGZo2C/Q01Hnr8dccuI8YEQ01P4fnigBxtrNbzrGIUjMnNyr/2Q==
 </value>
   </data>
+  <data name="panel2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAABGdBTUEAALGeYUxB9wAAACBjSFJNAAB6
+        RAAAgIMAAPn/AACEzgAAcUcAAPA+AAA4pQAAG1gA1u50AAAACXBIWXMAAAsTAAALEwEAmpwYAAAB+klE
+        QVR4Xu3IwQnAMADEsCyY/ddp4L7uBjLo4/O6wK+cwOQEJicwOYHJCUxOYHICkxOYnMDkBCYnMDmByQlM
+        TmByApMTmJzA5AQmJzA5gckJTE5gcgKTE5icwOQEJicwOYHJCUxOYHICkxOYnMDkBCYnMDmByQlMTmBy
+        ApMTmJzA5AQmJzA5gckJTE5gcgKTE5icwOQEJicwOYHJCUxOYHICkxOYnMDkBCYnMDmByQlMTmByApMT
+        mJzA5AQmJzA5gckJTE5gcgKTE5icwOQEJicwOYHJCUxOYHICkxOYnMDkBCYnMDmByQlMTmByApMTmJzA
+        5AQmJzA5gckJTE5gcgKTE5icwOQEJicwOYHJCUxOYHICkxOYnMDkBCYnMDmByQlMTmByApMTmJzA5AQm
+        JzA5gckJTE5gcgKTE5icwOQEJicwOYHJCUxOYHICkxOYnMDkBCYnMDmByQlMTmByApMTmJzA5AQmJzA5
+        gckJTE5gcgKTE5icwOQEJicwOYHJCUxOYHICkxOYnMDkBCYnMDmByQlMTmByApMTmJzA5AQmJzA5gckJ
+        TE5gcgKTE5icwOQEJicwOYHJCUxOYHICkxOYnMDkBCYnMDmByQlMTmByApMTmJzA5AQmJzA5gckJTE5g
+        cgKTE5icwOQEJicwOYHJCUxOYHIC59wPFI0CAhFnZgQAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
