--- a/SylDesk/SylDesk/CalculadoraEcu.resx
+++ b/SylDesk/SylDesk/CalculadoraEcu.resx
@@ -117,4 +117,53 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAUgAAAFIAZZ7OisAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAABKklEQVRYR2MwNjb+j4xNTExu+vr6/kfGOze3f9y1ueM/OXjahKIraHY8NjIyUvn//z8DCA+EA0AY
+        7giqOmDBrIr/zs62/3Myw+FiOBwAwmBHUNUBc6aXgs1IjA+Ai+FxAAg/HmgH/B91wPBywMpFtf+z0kP/
+        tzWmw8Xo6gBsmBwHPHJ1dT2DjNubM451t2WdIQfnZIQdQLcDGWM4gN541AGjDsBwgIWV1c1tZx78pxae
+        smQzadlw1AHoDthx9v7/E1duEo0PX7pNXQfsOX/v/6MHF4jG125doa4DdgJD4PTVG0Tjo5epHAKUYood
+        sOvc/f9Xbl0lGp+5doO6DhjwNLAdiPeev0s03n3uHnUdQCke+lEACtLbdy8RjS/euEZdB1CKRx2A3wHG
+        /wGadXY1ltmWpwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAN0AAADdAXBTogcAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAABgUlEQVRYR82XS27CQAyGs4MjFIIEC7Y9SK/AeXKHROI03XGGdAElO5Yg1lP/rY3M4DwIoSbSR8SM
+        7d+Z9yQhhE58LZejajb72KdpsZ9OP+ldEiem5LICNrC1YliYhZrdfD6hwPl3mh7pHbrAtjl8rZgasxBs
+        F4sxBcmIswTuAXwzxLI0gFlIDm/kuFGBHmWDmJbWTQH14Ts5VFGAIagQO9a7+sNf/gxxoYpbQoujz4ds
+        9jrQHZcxcUmAKjDgLIdnkF0lwFPtkdF+L2eZovL1eWRww2G1MsstOtrmvwlg1WpbZBAQz3G9Nus1sMHT
+        lgQ0oY1ph+XVNNJI4KYkuthooI3mL+KKOpoE7hVnioQ3EavSxBLqKR6gjRbArmYb1KAFe4v/USIBbKdW
+        ZSMijKenODi9RALOXfACg9B3GrovRO5LMdmiG/w2I/y4b8fcCn4HEuB+JOMk/A6lAo7OMIwch6D9WC5w
+        S/hcTAT0Ezn6XM00PEX//3Iag1WLl+0Br+ch+QEEBhi0cShK8gAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="buttonBorrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAN0AAADdAXBTogcAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAADrElEQVRYR92Wa0hTURzAr9eJVvTyUdGH+qBisHxkPqdBUB8Cw6DXpjm39G6WJbbmZisfl16oSViU
+        VJAVhVaUUFmklUkRSIgQJdqLiiQsRcEiCqen+1+e23X+t3bnp/rwg7OzeX+/s3N2vQwhBEWvN/ao1Vqi
+        VmdNomh3CSm2lCPwrSaTaRp2PVegk3l5O1ZhYorrgHJitfIbsWu6Ap3kuJ1qKtNotCQzUzcqpchU8kVY
+        bZ+EbzRgj4XXY9d0BTopDcjWcv3YZ6RYi/iKfzsA9hykFENufg0N0GpzhqXvAWZz6XKLhY+hFBfxdTRA
+        2I6yCe8VlyoZhvFxFlPGT/tvmae4O4Q4/FNXEYxwqEYwiTvkB5SP2Gy2IDSA4/LNumxDr7DXg1SQkZFN
+        hHkHer1BFG/Zoie5OdvIfr6SlJUeFgUwPnSg2kHJ3oN/xFa+Q6DJai3TYnJAHHBcYRQV6XSceBHbnnIx
+        IC+vwDF36eJVcrzmlPgZGF+53OigquKYOC8cyDVSGYY4+D8CzjWQ+jTu09Vl6V116bnt9auzNktlGOLA
+        2wCbuXT0RsKG3taZcV+bfZaSu4yStCqiSE+witLdHaziXwYlL5GKKeLAm4CTaTnv7yuifoBUilMAZbQn
+        SGWVygGvA66v5Qboij0McCB8Gw0dC5dPn1LAlcqT9hZ26RgmB9wFjHNjSgEPZiUMY2KKBwFE2I51XgVc
+        UG1CpVI8CghWfYCtkB3QPCseld5ilfZqNuzNed+IzxDQOTex/6hfRNvZAGUbInfwMjiFkx3QwkaiASDf
+        xSwiQCUb9tzMLH5LX7fOiXuBBXSHpJyQFbBvvR6VA7ByKpRiYhYPPwtKHMICBB7LCqiNW4vKKVVs6Cun
+        AHvzzNhniJgyJCugJnU9KgaaWOWohVn00SmAHPELd3MGVK9lBRRrDKgcqGHDxT0XsEvG5NHs+FdYANyU
+        ZAXkby8kLb74ITzjG9ELMtjzRj/lAKx8POBHZ2Bin4sAMxoAj+Jb9UYH2dpcMUB4eiJ3ApPQAOAaq/x+
+        20c5Ru8DsHJXcgfzklLEAKOxIJSK3LF/petzQPHsRpR8E7xiAKDTGd5hUmeaA5MGMTHlrwEhqoGukPgF
+        kwIA2AqjsTDVHbWaghVtiuheTA78PSBFfFCZFOAxDMM+9o+5JytAWLlUDky8qBc8CYjlW3wm/mvGA5Jv
+        0q9dyoQX3tI+I3H+E/+Y0w8VUX33fSN/PlRE2+EmA79z+KnBacf+jhDC/AKu8RxknlTXnwAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
 </root>
